# User-Interfaces-CW2

cw2/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cw2  cw2.cbp  favourites_page.cpp  favourites_page.h  home_page.cpp  home_page.h  main_window.cpp  main_window.h  movies_page.cpp  movies_page.h  player.cpp  player.h  tomeo.cpp  tv_page.cpp  tv_page.h
cw2/cw2_autogen/: moc_predefs.h  mocs_compilation.cpp
cw2/cw2_autogen/EWIEGA46WW/: moc_main_window.cpp  moc_the_button.cpp  moc_the_player.cpp
